Changes after KPresenter 1.3 beta 3
===================================
Fixes:
- Fixed cursor not blinking in some cases
- Fixed "blinking cursor erases formatting characters" bug
- "Adjust object to contents" works as intended now
- Purpose of the 'Notebar' is unknown (#63037)
- kpresenter crashed when I tried to insert the variable
  "section title" (#61735)
- large footer from kpresenter 1.2.1 will crash kpresenter
  (#61449)
- embedded spreadsheet (table button) appears at wrong size
  (#58498)
- embedded kspread object displayed with wrong size (#33233)
- KPresenter hangs when inserted text wraps to newline
  (#56946)
- layer lowering is incorrect (#53277)
- resize handles deceptive when zoomed out (#61602)
- fixed painting garbage at a side of the screen in the presentation mode (on
  weird DPIs)

Changes after KPresenter 1.3 beta 2
===================================
Fixes:
- KPR 'forgets' solid line attribute of text frames (#61343)
- fix pasting text objects screwing UTF-8 text
- snap to Grid function aligns relatively, not absolutely (#56181)
- when cutting&pasting a vertically centred text frame,
  the vertical position changes (#61330)

Changes:
- grid, snap to grid are on now by default, with a finer step of 5mm
  (#60011 and #60013)

Changes after KPresenter 1.3 beta 1
===================================
Fixes:
- fixed loading of old documents with invalid paragraph indents
- paste image gives tiny initial object (#59058)
- setting the font size in the toolbar doesn't work (#39786)
- objects disappears on the rightside of a dinA0 presentation (#37370)
- large unwanted offset in print preview and printing (#56123)

New features:
- flip groups horizontally/vertically (#45561)


Changes after KPresenter 1.2
============================
- Add "add to bookmark" feature
- Add font properties : change relative font size when we sub/super script font
- Add support to add offset from baseline
- Now koinsertlink use 'recent document'