@@ -1,3 +1,7 @@
+Changes after KPresenter 1.3 RC1:
+=================================
+
+
 Changes after KPresenter 1.3 beta 3
 ===================================
 Fixes:
